# lib-microQRs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: codecov.yml  rust-clippy.yml
examples/: byte-layout.rs  simple.rs  txt2qr.rs
src/: bits.rs  codec.rs  error_cc.rs  gf256.rs  img.rs  lib.rs  qr.rs  tests.rs
src/benches/: benchmarks.rs
src/tests/: lib.rs
